--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -256,42 +256,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JG7-Io-Sw3">
-                                <rect key="frame" x="0.0" y="64" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="9Kb-qY-c0F"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="Ah2-xl-P1u"/>
-                                    <constraint firstAttribute="height" constant="30" id="JQz-ac-HA8"/>
-                                    <constraint firstAttribute="height" constant="30" id="Kk4-j0-dxU"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="OTk-Yp-aWv"/>
-                                    <constraint firstAttribute="width" constant="30" id="P6w-fJ-iML"/>
-                                    <constraint firstAttribute="width" constant="30" id="lKZ-dL-hkb"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="n2M-dq-npd"/>
-                                    <constraint firstAttribute="height" constant="30" id="v75-Gt-NKP"/>
-                                </constraints>
-                                <state key="normal" image="changeDirection.png"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="9Kb-qY-c0F"/>
-                                        <exclude reference="Ah2-xl-P1u"/>
-                                        <exclude reference="JQz-ac-HA8"/>
-                                        <exclude reference="Kk4-j0-dxU"/>
-                                        <exclude reference="OTk-Yp-aWv"/>
-                                        <exclude reference="P6w-fJ-iML"/>
-                                        <exclude reference="lKZ-dL-hkb"/>
-                                        <exclude reference="n2M-dq-npd"/>
-                                        <exclude reference="v75-Gt-NKP"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <action selector="changeDirectionPressed:" destination="454-R7-6vy" eventType="touchUpInside" id="GlJ-ic-H8e"/>
-                                </connections>
-                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="751" verticalHuggingPriority="751" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="146" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
-                                <rect key="frame" x="-4" y="102" width="382" height="466"/>
+                                <rect key="frame" x="-4" y="117" width="382" height="451"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="466" id="H4t-ts-sG4"/>
                                     <constraint firstAttribute="height" constant="540" id="rac-aS-tD6"/>
                                     <constraint firstAttribute="height" constant="466" id="zA5-fW-7sj"/>
                                 </constraints>
@@ -440,23 +408,56 @@
                                     <outlet property="delegate" destination="454-R7-6vy" id="bzD-pV-hPi"/>
                                 </connections>
                             </adBannerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JG7-Io-Sw3">
+                                <rect key="frame" x="16" y="64" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="9Kb-qY-c0F"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="Ah2-xl-P1u"/>
+                                    <constraint firstAttribute="height" constant="30" id="JQz-ac-HA8"/>
+                                    <constraint firstAttribute="height" constant="30" id="Kk4-j0-dxU"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="OTk-Yp-aWv"/>
+                                    <constraint firstAttribute="width" constant="30" id="P6w-fJ-iML"/>
+                                    <constraint firstAttribute="width" constant="30" id="lKZ-dL-hkb"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="n2M-dq-npd"/>
+                                    <constraint firstAttribute="height" constant="30" id="v75-Gt-NKP"/>
+                                </constraints>
+                                <state key="normal" image="changeDirection.png"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="9Kb-qY-c0F"/>
+                                        <exclude reference="Ah2-xl-P1u"/>
+                                        <exclude reference="JQz-ac-HA8"/>
+                                        <exclude reference="Kk4-j0-dxU"/>
+                                        <exclude reference="OTk-Yp-aWv"/>
+                                        <exclude reference="P6w-fJ-iML"/>
+                                        <exclude reference="lKZ-dL-hkb"/>
+                                        <exclude reference="n2M-dq-npd"/>
+                                        <exclude reference="v75-Gt-NKP"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="changeDirectionPressed:" destination="454-R7-6vy" eventType="touchUpInside" id="GlJ-ic-H8e"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="JG7-Io-Sw3" secondAttribute="bottom" constant="16" id="0JF-2O-i8p"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="293" id="0ry-jI-yff"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="319" id="151-BB-Yna"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="313" id="1Vy-qs-Q7w"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="2Dq-fo-F7M"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="35G-Qt-AfN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="313" id="3xa-ZO-8KW"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-20" id="4JK-MZ-Oxf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Npb-on-4bb" secondAttribute="trailing" constant="43" id="4dc-tQ-TJe"/>
                             <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="JG7-Io-Sw3" secondAttribute="bottom" constant="516" id="4ru-IL-n4c"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="20" id="4zd-Y3-LdW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="21" id="5zr-bt-LSh"/>
+                            <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="8SI-Qv-Rtu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="AIM-PV-1Gt"/>
-                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-20" id="APa-vr-7r6"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="CXo-DT-LdJ"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="JG7-Io-Sw3" secondAttribute="bottom" constant="8" symbolic="YES" id="EBx-Re-8wx"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="Npb-on-4bb" secondAttribute="leading" id="EMP-vD-9Rl"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" constant="8" id="ENj-LJ-ZyT"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="G9D-3W-gG8"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="293" id="GCV-DV-Sn3"/>
@@ -469,21 +470,16 @@
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="JG7-Io-Sw3" secondAttribute="bottom" constant="8" id="KwW-Vd-0qA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Npb-on-4bb" secondAttribute="trailing" constant="43" id="QRE-ir-6RK"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="bottom" secondItem="SEH-8j-C42" secondAttribute="bottomMargin" id="Rgs-Jv-aOX"/>
-                            <constraint firstItem="JG7-Io-Sw3" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="TaM-VW-3qZ"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" constant="12" id="UQO-pC-aYe"/>
-                            <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" constant="38" id="VeM-TE-6cb"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-19" id="W8I-Ym-ZQv"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="Wjc-Io-59O"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="XCP-gl-xGt"/>
                             <constraint firstItem="Npb-on-4bb" firstAttribute="bottom" secondItem="56K-fL-H5C" secondAttribute="top" id="YcZ-mD-wDH"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="ZHi-nH-ODF"/>
-                            <constraint firstItem="Npb-on-4bb" firstAttribute="leading" secondItem="HoU-9v-eoX" secondAttribute="leading" id="ZiM-4l-Peb"/>
+                            <constraint firstItem="JG7-Io-Sw3" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" id="bK8-9j-NXk"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="bV5-LO-qAR"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="bottom" secondItem="SEH-8j-C42" secondAttribute="bottomMargin" constant="-49" id="boP-Hv-wGP"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" id="ckp-g7-fTQ"/>
-                            <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="d4A-1n-OKh"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="JG7-Io-Sw3" secondAttribute="bottom" constant="16" id="dBm-H7-3AJ"/>
-                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-20" id="eHN-VV-z9A"/>
                             <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" id="eum-h2-mZa"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="fLd-YD-Fqg"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="hgx-Dm-KeA"/>
@@ -493,9 +489,10 @@
                             <constraint firstAttribute="trailingMargin" secondItem="JG7-Io-Sw3" secondAttribute="trailing" constant="313" id="k3s-Ch-3uu"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="m6Q-w8-RAH"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" id="mMM-Aq-ct9"/>
+                            <constraint firstItem="Npb-on-4bb" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" id="ncK-Ws-KAK"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="ngv-LP-O23"/>
                             <constraint firstItem="JG7-Io-Sw3" firstAttribute="trailing" secondItem="SEH-8j-C42" secondAttribute="trailingMargin" id="qI1-Vz-7xD"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-19" id="qV2-te-v0x"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="centerX" secondItem="SEH-8j-C42" secondAttribute="centerX" id="ugi-Vc-lij"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="uxy-BL-GhT"/>
                         </constraints>
                         <variation key="default">
@@ -795,6 +792,6 @@
         <image name="ArrowPathBegin.png" width="180" height="180"/>
         <image name="Calendar-50.png" width="30" height="30"/>
         <image name="Treasure Map-50.png" width="30" height="30"/>
-        <image name="changeDirection.png" width="40" height="40"/>
+        <image name="changeDirection.png" width="45" height="45"/>
     </resources>
 </document>
